[gd_scene load_steps=4 format=3 uid="uid://bveavdlpsb5lv"]

[ext_resource type="Script" path="res://scenes/bars/bottom_bar.gd" id="1_u5ya3"]
[ext_resource type="Texture2D" uid="uid://wl3k5etlp5jg" path="res://assets/img/joysticks/p1_idle.png" id="2_c3gwd"]
[ext_resource type="Texture2D" uid="uid://bdg6w83wmevh1" path="res://assets/img/buttons/yellow_up.png" id="4_8tes5"]

[node name="BottomBar" type="ColorRect"]
custom_minimum_size = Vector2(0, 50)
color = Color(0, 0, 0, 1)
script = ExtResource("1_u5ya3")

[node name="BottomHbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPadding" type="Container" parent="BottomHbox"]
layout_mode = 2

[node name="HelperLeft" type="HBoxContainer" parent="BottomHbox"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 10

[node name="Arrow" type="VBoxContainer" parent="BottomHbox/HelperLeft"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0

[node name="TopPadding" type="Container" parent="BottomHbox/HelperLeft/Arrow"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BottomHbox/HelperLeft/Arrow"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_c3gwd")
expand_mode = 3
stretch_mode = 5

[node name="BottomPadding" type="Container" parent="BottomHbox/HelperLeft/Arrow"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="HelpLabel" type="Label" parent="BottomHbox/HelperLeft"]
layout_mode = 2
size_flags_horizontal = 10
text = "Affichage"

[node name="GameTitle" type="Label" parent="BottomHbox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "GameName"

[node name="HelperRight" type="HBoxContainer" parent="BottomHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HelpLabel" type="Label" parent="BottomHbox/HelperRight"]
layout_mode = 2
size_flags_horizontal = 10
text = "Lancer"

[node name="Button" type="VBoxContainer" parent="BottomHbox/HelperRight"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0

[node name="TopPadding" type="Container" parent="BottomHbox/HelperRight/Button"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BottomHbox/HelperRight/Button"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_8tes5")
expand_mode = 3
stretch_mode = 5

[node name="BottomPadding" type="Container" parent="BottomHbox/HelperRight/Button"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="RightPadding" type="Container" parent="BottomHbox"]
layout_mode = 2

[node name="RefreshTimer" type="Timer" parent="."]
autostart = true

[node name="StickAnimation" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="RefreshTimer" to="." method="_on_refresh_timer_timeout"]
[connection signal="timeout" from="StickAnimation" to="." method="_on_stick_animation_timeout"]
